add restart deployment button
