# external/maos-core/api.yaml
@@ -1504,6 +1504,40 @@ paths:
           description: Deployment not found
         "500":
           $ref: "#/components/responses/500"
+  /v1/admin/deployments/{id}/restart:
+    post:
+      summary: Restart a specific Deployment.
+      operationId: adminRestartDeployment
+      tags:
+        - Admin
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+            format: int64
+          required: true
+          description: Deployment ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: string
+              required:
+                - user
+      responses:
+        "201":
+          description: Successful restarted
+        "401":
+          description: Unauthorized
+        "404":
+          description: Deployment not found
+        "500":
+          $ref: "#/components/responses/500"
   /v1/admin/deployments/{id}/submit:
     post:
       summary: >-
